# xhs-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/xhs_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
tests/: test_client.py  test_config.py
